test/mutation_analysis/s0357_count_numbers_with_unique_digits/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0357_count_numbers_with_unique_digits/hafis/starchat/mutants/2/Solution.java:31: error: unreachable statement
        return ans;
        ^
1 error
